# Record_videos

./: CMakeLists.txt  README.md  config.txt  main.cpp
include/: Buffer.hpp  Camera.hpp  StoreImage.hpp
